--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
 			<div class=cards>
 				<div class="card">
-					<img src="images/Marianne.png" alt="Photo Marianne">
+					<img src="images/marianne.png" alt="Photo Marianne">
 					<h3>Marianne Peuch-Lestrade</h3>
 				</div>
 
 				<div class="card">
-					<img src="images/Bertrand.png" alt="Photo Bertand">
+					<img src="images/bertrand.png" alt="Photo Bertand">
 					<h3>Bertrand Blum</h3>
 				</div>
 
 				<div class="card">
-					<img src="images/Jeanne.jpg" alt="Photo Jeanne">
+					<img src="images/jeanne.jpg" alt="Photo Jeanne">
 					<h3>Jeanne Chaucheyras</h3>
 				</div>
 			</div>
